testdata/baselines/reference/submodule/conformance/jsdocImportTypeReferenceToClassAlias.errors.txt
test.js(1,32): error TS2694: Namespace '"mod1"' has no exported member 'C'.


==== mod1.js (0 errors) ====
    class C {
        s() { }
    }
    module.exports.C = C
    
==== test.js (1 errors) ====
    /** @typedef {import('./mod1').C} X */
                                   ~
!!! error TS2694: Namespace '"mod1"' has no exported member 'C'.
    /** @param {X} c */
    function demo(c) {
        c.s
    }
    